title overflow fix modification (beta)

--- a/styles/base.css
+++ b/styles/base.css
@@ -9,7 +9,7 @@
 
 html {
     max-width: 100vw;
-    /* overflow-x: hidden; */
+    overflow-x: hidden;
 }
 
 body {
